# pdf-image-exporter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PACKAGING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
debian/: changelog  control  copyright  install  manpages  rules  watch
debian/tests/: control  smoke
docs/: DEVELOPMENT.md  TRANSLATING.md  pdf-image-exporter.1
src/pdf_image_exporter/: __init__.py  __main__.py  application.py  metadata.py
src/pdf_image_exporter/cli/: __init__.py  main.py
src/pdf_image_exporter/core/: __init__.py  conflicts.py  conversion.py  dimensions.py  discovery.py  errors.py  formats.py  naming.py  page_ranges.py  pdf_info.py  profiles.py  queue.py
src/pdf_image_exporter/models/: __init__.py
src/pdf_image_exporter/resources/desktop/: io.github.pdfimageexporter.PDFImageExporter.desktop
src/pdf_image_exporter/services/: __init__.py  logging_service.py  pdfinfo_service.py  pdftocairo_service.py  process_service.py  profile_store.py  settings_service.py  thumbnail_service.py  translation_service.py
src/pdf_image_exporter/translations/: __init__.py  app_en.ts  app_es.ts
src/pdf_image_exporter/ui/: main_window.py
tests/unit/: test_conflicts.py  test_conversion_queue_runner.py  test_dimensions.py  test_discovery.py  test_errors.py  test_logging_service.py  test_naming.py  test_page_ranges.py  test_pdfinfo.py  test_pdftocairo_args.py  test_profile_store.py  test_profiles.py  test_queue.py  test_settings_service.py  test_thumbnail_service.py  test_translation_service.py
(+4 files in other folders)
