[build-system]
requires = ["setuptools>=66", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-image-exporter"
version = "0.1.0"
description = "Graphical PDF to image exporter using Poppler pdftocairo."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "PDF Image Exporter contributors"}]
keywords = ["pdf", "image", "poppler", "qt", "debian"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.gui-scripts]
pdf-image-exporter = "pdf_image_exporter.__main__:main"

[project.scripts]
pdf-image-exporter-cli = "pdf_image_exporter.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pdf_image_exporter = ["translations/*.ts", "translations/*.qm", "resources/desktop/*", "resources/metainfo/*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
exclude = ["build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
